Bug 511036 - The podcats are not sorted in order after refresh the podcast rss
Summary: The podcats are not sorted in order after refresh the podcast rss
Status: RESOLVED FIXED
Alias: None
Product: amarok
Classification: Applications
Component: Podcast (other bugs)
Version First Reported In: 3.3.1
Platform: Other Linux
: NOR normal
Target Milestone: kf5
Assignee: Amarok Bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2025-10-24 17:08 UTC by victorhck
Modified: 2026-01-10 18:45 UTC (History)
3 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description victorhck 2025-10-24 17:08:58 UTC
SUMMARY

When you subscribe to a podcasts, the items are sorted right by date.
After few days if you refresh the podcats to show new items, then this are not sorted by date, new items at the beginning. This new items are at the end of the list... and all become a mess!! :)
(And really should be showed with the name of the podcats first? That hide the real name of the podcats)

STEPS TO REPRODUCE
1.  Subscribe to a daily podcast
2. after few days, refresh the podcasts te get new chapters
3. where the new chapters have gone?? uhg, seems to be at the end of the list
4. If you remove the podcats and subscribe again, then the chapters are showed properly.

OBSERVED RESULT

The chapters are not showed properly, and it's a mess to look for new chapters

EXPECTED RESULT

To show always the podcats in the right order by date, new in the top of the list

SOFTWARE/OS VERSIONS
Operating System: openSUSE Tumbleweed 20251022
KDE Plasma Version: 6.5.0
KDE Frameworks Version: 6.19.0
Qt Version: 6.10.0
Kernel Version: 6.17.4-1-default (64-bit)
Graphics Platform: Wayland
Processors: 16 × AMD Ryzen 7 8845HS w/ Radeon 780M Graphics
Memory: 32 GiB of RAM (29.1 GiB usable)
Graphics Processor: AMD Radeon 780M Graphics


ADDITIONAL INFORMATION
Comment 1 Tuomas Nurmi 2025-11-14 14:00:12 UTC
Thank you for the report! I'll try to have a look at this at some point, sounds like a relatively simple thing to fix.
Comment 2 Tuomas Nurmi 2026-01-10 11:18:15 UTC
Hmm, somewhy automatic commit hook didn't work.
However, should be fixed now with https://invent.kde.org/multimedia/amarok/-/commit/47a749e7f0c736e6c4fbbfe83bf6d39a7369012b

Apparently a "GMT" suffix used by some podcast channels is not parsed
successfully by Qt::RFC2822Date. Fix by removing any stray "GMT"s. Could also
be replaced with +0000, but this would require more effort so any "GMT+0000"
format would not get broken, and a date string without any timezone suffix is
considered GMT/UTC anyhow.

BUG: 511036
Comment 3 Tuomas Nurmi 2026-01-10 18:45:40 UTC
Git commit 47a749e7f0c736e6c4fbbfe83bf6d39a7369012b by Tuomas Nurmi.
Committed on 10/01/2026 at 10:09.
Pushed by nurmi into branch 'master'.

Fix podcast date parsing for some channels

Apparently a "GMT" suffix used by some podcast channels is not parsed
successfully by Qt::RFC2822Date. Fix by removing any stray "GMT"s. Could also
be replaced with +0000, but this would require more effort so any "GMT+0000"
format would not get broken, and a date string without any timezone suffix is
considered GMT/UTC anyhow.

M  +1    -0    ChangeLog
M  +3    -1    src/core/podcasts/PodcastReader.cpp

https://invent.kde.org/multimedia/amarok/-/commit/47a749e7f0c736e6c4fbbfe83bf6d39a7369012b