Fix podcast date parsing for some channels

Apparently a "GMT" suffix used by some podcast channels is not parsed
successfully by Qt::RFC2822Date. Fix by removing any stray "GMT"s. Could also
be replaced with +0000, but this would require more effort so any "GMT+0000"
format would not get broken, and a date string without any timezone suffix is
considered GMT/UTC anyhow.

BUG: 511036